depuis un moment dans la version de dev, l'integralité de la compatibilité en version Java3 (et oui c'est tres rare mais c'est pratique d'utiliser cette lib pour les projets legacy même en 2017) n'était plus testé, c'est chose faite  avec un jdk 1.3 en test